# adhoc-analysis-sample

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/raw/: sales_data.csv
notebook/: kmeans.py  sample.py
src/data_processor/: loader.py  process.py  schema.py
src/util/: consts.py
