[tool.poetry]
name = "adhoc-analysis-sample"
version = "0.1.0"
description = ""
authors = ["mysuikabar <mizuho.suikabar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
jupyter = "^1.0.0"
pandera = "^0.20.3"
scikit-learn = "^1.5.1"
hydra-core = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
